export const snapshot = {};

snapshot[`Build a markdown site 1`] = `7`;

snapshot[`Build a markdown site 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`Build a markdown site 3`] = `
[
]
`;

snapshot[`Build a markdown site 4`] = `
{
  content: "<!DOCTYPE html>
<h1>Normal page</h1>
<ul>
<li>List</li>
<li>Of</li>
<li>Elements</li>
</ul>",
  data: {
    children: "<h1>Normal page</h1>
<ul>
<li>List</li>
<li>Of</li>
<li>Elements</li>
</ul>",
    content: "# Normal page

- List
- Of
- Elements
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Basic page",
    url: "/basic/",
  },
  dest: {
    ext: ".html",
    path: "/basic/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/basic",
    remote: undefined,
    slug: "basic",
  },
}
`;

snapshot[`Build a markdown site 5`] = `
{
  content: '<!DOCTYPE html>
<p><a href="#foo">link</a>{target=_blank}</p>',
  data: {
    children: '<p><a href="#foo">link</a>{target=_blank}</p>',
    content: "[link](#foo){target=_blank}
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-attributes/",
  },
  dest: {
    ext: ".html",
    path: "/with-attributes/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/with-attributes",
    remote: undefined,
    slug: "with-attributes",
  },
}
`;

snapshot[`Build a markdown site 6`] = `
{
  content: '<!DOCTYPE html>
<pre><code class="language-html">&#x3C;p>Example&#x3C;/p>
</code></pre>
<pre><code>&#x3C;p>Example without color highlight&#x3C;/p>
</code></pre>',
  data: {
    children: '<pre><code class="language-html">&#x3C;p>Example&#x3C;/p>
</code></pre>
<pre><code>&#x3C;p>Example without color highlight&#x3C;/p>
</code></pre>',
    content: "\`\`\`html
<p>Example</p>
\`\`\`

\`\`\`
<p>Example without color highlight</p>
\`\`\`
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-code/",
  },
  dest: {
    ext: ".html",
    path: "/with-code/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/with-code",
    remote: undefined,
    slug: "with-code",
  },
}
`;

snapshot[`Build a markdown site 7`] = `
{
  content: "<!DOCTYPE html>
<!-- deno-fmt-ignore-file -->
<p>This is a definition title
: And this the description
: Other description</p>
<p>Other title
: And other description</p>",
  data: {
    children: "<!-- deno-fmt-ignore-file -->
<p>This is a definition title
: And this the description
: Other description</p>
<p>Other title
: And other description</p>",
    content: "<!-- deno-fmt-ignore-file -->
This is a definition title
: And this the description
: Other description

Other title
: And other description
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-deflist/",
  },
  dest: {
    ext: ".html",
    path: "/with-deflist/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/with-deflist",
    remote: undefined,
    slug: "with-deflist",
  },
}
`;

snapshot[`Build a markdown site 8`] = `
{
  content: '<!DOCTYPE html>
<h1><p>Module <strong>example</strong></p></h1>

<div><p>Welcome to this <a href="/">page</a></p></div>
',
  data: {
    children: '<h1><p>Module <strong>example</strong></p></h1>

<div><p>Welcome to this <a href="/">page</a></p></div>
',
    content: "<h1>{{ title | md(true) | safe }}</h1>

<div>{{ description | md | safe }}</div>
",
    date: 1970-01-01T00:00:00.000Z,
    description: "Welcome to this [page](/)
",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Module **example**",
    url: "/with-filter/",
  },
  dest: {
    ext: ".html",
    path: "/with-filter/index",
  },
  src: {
    asset: undefined,
    ext: ".njk",
    path: "/with-filter",
    remote: undefined,
    slug: "with-filter",
  },
}
`;

snapshot[`Build a markdown site 9`] = `
{
  content: '<!DOCTYPE html>
<h1>Module example</h1>
<p><a href="/">Back to home</a></p>',
  data: {
    children: '<h1>Module example</h1>
<p><a href="/">Back to home</a></p>',
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    templateEngine: "tmpl.js,md",
    title: "Module example",
    url: "/with-module/",
  },
  dest: {
    ext: ".html",
    path: "/with-module/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/with-module",
    remote: undefined,
    slug: "with-module",
  },
}
`;

snapshot[`Build a markdown site 10`] = `
{
  content: '<!DOCTYPE html>
<!-- deno-fmt-ignore-file -->
<h1></h1>
<p>Foo</p>
<ul>
<li>one: <a href="/items/un.html">un</a></li>
<li>two: <a href="/items/dous.html">dous</a></li>
<li>three: <a href="/items/tres.html">tres</a></li>
</ul>',
  data: {
    children: '<!-- deno-fmt-ignore-file -->
<h1></h1>
<p>Foo</p>
<ul>
<li>one: <a href="/items/un.html">un</a></li>
<li>two: <a href="/items/dous.html">dous</a></li>
<li>three: <a href="/items/tres.html">tres</a></li>
</ul>',
    content: "<!-- deno-fmt-ignore-file -->
# {{ title }}

Foo

{% for title, no in myData %}
- {{ title }}: [{{ no }}](/items/{{ no }}.html)
{%- endfor %}
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    myData: {
      one: "un",
      three: "tres",
      two: "dous",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    templateEngine: "njk,md",
    url: "/with-nunjucks/",
  },
  dest: {
    ext: ".html",
    path: "/with-nunjucks/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/with-nunjucks",
    remote: undefined,
    slug: "with-nunjucks",
  },
}
`;
